<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/varganiLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="20sp"
        android:layout_margin="5sp"
        app:cardBackgroundColor="#2B2B2B"
        android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="10sp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="0sp"
                    android:layout_weight="2"
                    android:onClick="openMenu"
                    android:layout_height="30sp"

                    android:foregroundGravity="center"
                    android:layout_gravity="center"
                    android:layout_margin="10sp"
                    android:src="@drawable/menu"
                    />

                <TextView
                    android:layout_width="0sp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="DebtCred"
                    android:id="@+id/eventNameDash"
                    android:maxEms="5"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/white"/>
                    <ImageView
                        android:layout_width="0sp"
                        android:layout_weight="2"
                        android:onClick="Reset_All"
                        android:layout_height="30sp"
                        android:foregroundGravity="center"
                        android:layout_gravity="center"
                        android:layout_margin="10sp"
                        android:src="@drawable/ic_baseline_sync_24"
                    />
            </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="50sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello User ,"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Good morning,\nWishing a great day ahead"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:textStyle="bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="30sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Your Previous Trasactions"
        android:textSize="15sp"
        android:layout_margin="5sp"
        android:textColor="@color/white"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/display_previous_Transactions"/>
    </HorizontalScrollView>
    <View
        android:layout_width="match_parent"
        android:layout_height="30sp"/>



    <!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/day_wise_collection_trend"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="20sp"-->
<!--        android:layout_margin="10sp"-->
<!--        android:textStyle="bold"/>-->
<!--        https://github.com/NandagopalR/awesome-android-1-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="10sp"
            app:cardCornerRadius="20sp"
            app:cardBackgroundColor="#505050"
            app:cardElevation="30sp"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">
<!--                <lecho.lib.hellocharts.view.LineChartView-->
<!--                    android:id="@+id/eventLineChartDash"-->
<!--                    android:layout_margin="10sp"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="200sp" />-->

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart1"
                    android:layout_width="match_parent"
                    android:layout_height="300sp"
                    android:layout_above="@+id/seekBar1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="5sp"
                    android:weightSum="3"
                    >

                    <TextView
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/expanditure"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:text="@string/balance"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textColor="@color/lightblue"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/Income"
                        android:textStyle="bold"
                        android:textColor="@color/greenone"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="5sp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:weightSum="3"
                    >
                    <TextView
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/expanditure"
                        android:textStyle="bold"
                        android:id="@+id/eventExpenseDash"
                        android:textSize="15sp"
                        android:textColor="@color/red"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:text="@string/balance"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:id="@+id/eventBalanceDash"
                        android:textStyle="bold"
                        android:textColor="@color/lightblue"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"
                        android:text="@string/Income"
                        android:textStyle="bold"
                        android:id="@+id/eventIncomeDash"
                        android:textColor="@color/greenone"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="10sp"
        app:cardCornerRadius="50sp"
        android:id="@+id/printData"
        app:cardElevation="30sp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Print Data"
            android:textColor="@color/white"
            android:background="@drawable/exp_backg"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            app:drawableRightCompat="@drawable/arrow"
            android:gravity="center"
            android:padding="20sp"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_options"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="10sp"
        android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_margin="5sp"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="0sp"
                    android:layout_weight="0.5"
                    android:layout_margin="15sp"
                    android:onClick="AddVargani"
                    app:cardElevation="10sp"
                    app:cardCornerRadius="10sp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="15sp"
                        android:background="@drawable/exp_back"
                        android:drawableTop="@drawable/var_in"
                        android:drawablePadding="5sp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/vargani"
                        android:textSize="20sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0sp"
                    android:onClick="AddExpense"
                    android:layout_weight="0.5"
                    android:layout_margin="15sp"
                    app:cardElevation="10sp"
                    app:cardCornerRadius="10sp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:drawablePadding="5sp"
                        android:padding="15sp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:maxLines="1"
                        android:background="@drawable/exp_back"
                        android:ellipsize="end"
                        android:drawableTop="@drawable/exp_out"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/expanditure"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_margin="5sp"
                >


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:layout_margin="15sp"
                    app:cardElevation="10sp"
                    android:onClick="GetReports"
                    app:cardCornerRadius="20sp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:drawablePadding="5sp"
                        android:layout_margin="15sp"
                        android:textSize="20sp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:drawableTop="@drawable/vargani_report"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Analyse your Data"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_margin="5sp"
                >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_weight="0.5"
                android:layout_margin="15sp"
                app:cardElevation="10sp"
                android:onClick="ShowAllTransactions"
                app:cardCornerRadius="20sp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:drawablePadding="5sp"
                    android:layout_margin="15sp"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:drawableTop="@drawable/disprec"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="DisplayAllTransactions"/>
            </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

</LinearLayout>
</ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/varganimenu"
        android:layout_gravity="start"
        app:headerLayout="@layout/varganiheader"
        android:id="@+id/navigationView"
        >
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
